--- a/index.html
+++ b/index.html
@@ -12,46 +12,22 @@
 </head>
 <body>
     <div class="main">
-        <div class="one">
-            <img src="images/02.jpg" alt="">
-        </div>
-        <div class="two">
-            <img src="images/03.jpg" alt="">
-        </div>
-        <div class="three">
-            <img src="images/04.jpg" alt="">
-        </div>
-        <div class="four">
-            <img src="images/06.jpg" alt="">
-        </div>
-        <div class="five">
-            <img src="images/07.jpg" alt="">
-        </div>
-        <div class="six">
-            <img src="images/08.jpg" alt="">
-        </div>
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
+        <div class="five"></div>
+        <div class="six"></div>
     </div>
 
 
     <div class="main2">
-        <div class="one">
-            <img src="images/02.jpg" alt="">
-        </div>
-        <div class="two">
-            <img src="images/03.jpg" alt="">
-        </div>
-        <div class="three">
-            <img src="images/04.jpg" alt="">
-        </div>
-        <div class="four">
-            <img src="images/06.jpg" alt="">
-        </div>
-        <div class="five">
-            <img src="images/07.jpg" alt="">
-        </div>
-        <div class="six">
-            <img src="images/08.jpg" alt="">
-        </div>
+        <div class="one"></div>
+        <div class="two"></div>
+        <div class="three"></div>
+        <div class="four"></div>
+        <div class="five"></div>
+        <div class="six"></div>
     </div>
 
 
